src/objects/Charket__WeChatTag__c.object
<CustomObject>
    <fields>
        <fullName>Charket__FollowerCount__c</fullName>
        <label>Follower Count</label>
        <summaryFilterItems>
            <field>Charket__WeChatTagAssignment__c.Charket__IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Charket__WeChatTagAssignment__c.Charket__WeChatTag__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Charket__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Account</label>
        <referenceTo>Charket__WeChatAccount__c</referenceTo>
        <relationshipLabel>WeChat Tags</relationshipLabel>
        <relationshipName>WeChatTags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatId__c</fullName>
        <externalId>true</externalId>
        <label>WeChat ID</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>WeChat Tag</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>